Added bidirectional POJO <> XML mapping for Collection